# raytracer-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
apps/clock/: main.cpp
apps/projectile/: main.cpp
include/: canvas.hpp  color.hpp  intersection.hpp  matrix.hpp  ray.hpp  sphere.hpp  transform.hpp  tuple.hpp  utils.hpp
src/: canvas.cpp  color.cpp  ray.cpp  sphere.cpp  transform.cpp  tuple.cpp  utils.cpp
tests/: CMakeLists.txt  canvas_test.cpp  color_test.cpp  matrix_test.cpp  ray_test.cpp  sphere_test.cpp  transform_test.cpp  tuple_test.cpp
